--- a/views/all-staff.ejs
+++ b/views/all-staff.ejs
@@ -152,6 +152,42 @@
 						</a>
 					</li>
 					<li class="nav-item">
+						<a href="/assets/add">
+							<i class="fa-solid fa-box-archive"></i>
+							<p>Add Asset</p>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/assets/all">
+							<i class="fa-solid fa-boxes-stacked"></i>
+							<p>All Assets</p>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/ledger/add">
+							<i class="fa-solid fa-book"></i>
+							<p>Ledger Entry</p>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/ledger/view">
+							<i class="fa-solid fa-book-open"></i>
+							<p>View Ledger</p>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/ledger/accounts">
+							<i class="fa-solid fa-sitemap"></i>
+							<p>Chart of Accounts</p>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/ledger/trial-balance">
+							<i class="fa-solid fa-balance-scale"></i>
+							<p>Trial Balance</p>
+						</a>
+					</li>
+					<li class="nav-item">
 						<a href="/logout">
 							<i class="fas fa-sign-out-alt"></i>
 							<p>Log Out</p>
