--- a/views/edit-product.ejs
+++ b/views/edit-product.ejs
@@ -184,19 +184,19 @@
                 <ul class="nav">
                     <li class="nav-item">
                         <a href="/admin/dashboard">
-                            <i class="la la-dashboard"></i>
+                            <i class="fa-solid fa-gauge"></i>
                             <p>Dashboard</p>
                         </a>
                     </li>
                     <li class="nav-item active">
                         <a href="/admin/product-upload">
-                            <i class="la la-table"></i>
+                            <i class="fa-solid fa-upload"></i>
                             <p>Upload Products</p>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a href="/admin/all-products">
-                            <i class="la la-keyboard-o"></i>
+                            <i class="fa-solid fa-tarp"></i>
                             <p>All Products</p>
                             <span class="badge badge-count">
                                 <%= products.length %>
@@ -216,8 +216,20 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a href="/assets/add">
+                            <i class="fa-solid fa-box-archive"></i>
+                            <p>Add Asset</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/assets/all">
+                            <i class="fa-solid fa-boxes-stacked"></i>
+                            <p>All Assets</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a href="/logout">
-                            <i class="la la-th"></i>
+                            <i class="fas fa-sign-out-alt"></i>
                             <p>Log Out</p>
                         </a>
                     </li>
