--- a/views/update-staff.ejs
+++ b/views/update-staff.ejs
@@ -149,6 +149,18 @@
 						</a>
 					</li>
 					<li class="nav-item">
+						<a href="/assets/add">
+							<i class="fa-solid fa-box-archive"></i>
+							<p>Add Asset</p>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/assets/all">
+							<i class="fa-solid fa-boxes-stacked"></i>
+							<p>All Assets</p>
+						</a>
+					</li>
+					<li class="nav-item">
 						<a href="/logout">
 							<i class="fas fa-sign-out-alt"></i>
 							<p>Log Out</p>
